--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,14 +4,15 @@ author: Taesu Pyo <pyotaesu@gmail.com>
 description: Decode Exif data from tiff and jpeg files.
 homepage: https://www.github.com/bigflood/dartexif
 environment:
-  sdk: flutter
+  sdk: '>=1.16.0-dev.5.0 <2.0.0'
 dependencies:
-  args: '^0.13.7'
+  # args: '^0.13.7'
+  args: '^0.4.2'
   collection: '^1.0.0'
   convert: '>=1.0.0 <3.0.0'
   sprintf: ">=1.0.8 <2.0.0"
 dev_dependencies:
-  test: flutter
+  test: '>=0.12.0 <0.13.0'
 executables:
   print_exif:
   
